--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,129 +2,127 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap');
 
 $background-color-light: #f2f6ff;
-$background-color-dark: #2B2830;
+$background-color-dark: #2b2830;
 
 $text-color-light: black;
 $text-color-dark: white;
 
-$link-color-ligth: #3913B8;
+$link-color-ligth: #3913b8;
 $link-color-dark: #ad92fd;
 
-$marker-color-ligth: #3913B8;
+$marker-color-ligth: #3913b8;
 $marker-color-dark: #ad92fd;
 
 $code-background-color-light: white;
 $code-background-color-dark: black;
 
-$button-background-color-light: #3913B8;
+$button-background-color-light: #3913b8;
 $button-background-color-dark: #ad92fd;
 
-
-
 :root {
-	--gradient: linear-gradient( 135deg, #72EDF2 10%, #5151E5 100%);
+  --gradient: linear-gradient(135deg, #72edf2 10%, #5151e5 100%);
 }
 
 * {
-	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
-	line-height: 1.25em;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  line-height: 1.25em;
 }
 
 .clear {
-	clear: both;
+  clear: both;
 }
 
 body {
-	margin: 0;
-	width: 100%;
-	height: 100vh;
-	font-family: 'Montserrat', sans-serif;
-	background-color: #343d4b;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+  margin: 0;
+  width: 100%;
+  height: 100vh;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #343d4b;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .container {
-	border-radius: 25px;
-	-webkit-box-shadow: 0 0 70px -10px rgba(0, 0, 0, 0.2);
-	        box-shadow: 0 0 70px -10px rgba(0, 0, 0, 0.2);
-	background-color: #222831;
-	color: #ffffff;
-	height: 400px;
+  border-radius: 25px;
+  -webkit-box-shadow: 0 0 70px -10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 70px -10px rgba(0, 0, 0, 0.2);
+  background-color: #222831;
+  color: #ffffff;
+  height: 400px;
 }
 
 .weather-side {
-	position: relative;
-	height: 100%;
-	border-radius: 25px;
-	background-image: url("https://images.unsplash.com/photo-1559963110-71b394e7494d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=675&q=80");
-	width: 300px;
-	-webkit-box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.2);
-	        box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.2);
-	-webkit-transition: -webkit-transform 300ms ease;
-	transition: -webkit-transform 300ms ease;
-	-o-transition: transform 300ms ease;
-	transition: transform 300ms ease;
-	transition: transform 300ms ease, -webkit-transform 300ms ease;
-	-webkit-transform: translateZ(0) scale(1.02) perspective(1000px);
-	        transform: translateZ(0) scale(1.02) perspective(1000px);
-	float: left;
+  position: relative;
+  height: 100%;
+  border-radius: 25px;
+  background-image: url('https://images.unsplash.com/photo-1559963110-71b394e7494d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=675&q=80');
+  width: 300px;
+  -webkit-box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.2);
+  -webkit-transition: -webkit-transform 300ms ease;
+  transition: -webkit-transform 300ms ease;
+  -o-transition: transform 300ms ease;
+  transition: transform 300ms ease;
+  transition: transform 300ms ease, -webkit-transform 300ms ease;
+  -webkit-transform: translateZ(0) scale(1.02) perspective(1000px);
+  transform: translateZ(0) scale(1.02) perspective(1000px);
+  float: left;
 }
 
 .weather-side:hover {
-	-webkit-transform: scale(1.1) perspective(1500px) rotateY(10deg);
-	        transform: scale(1.1) perspective(1500px) rotateY(10deg);
+  -webkit-transform: scale(1.1) perspective(1500px) rotateY(10deg);
+  transform: scale(1.1) perspective(1500px) rotateY(10deg);
 }
 
 .weather-gradient {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	background-image: var(--gradient);
-	border-radius: 25px;
-	opacity: 0.8;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-image: var(--gradient);
+  border-radius: 25px;
+  opacity: 0.8;
 }
 
 .date-container {
-	position: absolute;
-	top: 25px;
-	left: 25px;
+  position: absolute;
+  top: 25px;
+  left: 25px;
 }
 
 .date-dayname {
-	margin: 0;
+  margin: 0;
 }
 
 .date-day {
-	display: block;
+  display: block;
 }
 
 .location {
-	display: inline-block;
-	margin-top: 10px;
+  display: inline-block;
+  margin-top: 10px;
 }
 
 .location-icon {
-	display: inline-block;
-	height: 0.8em;
-	width: auto;
-	margin-right: 5px;
+  display: inline-block;
+  height: 0.8em;
+  width: auto;
+  margin-right: 5px;
 }
 
 .weather-container {
-	position: absolute;
-	bottom: 25px;
-	left: 25px;
+  position: absolute;
+  bottom: 25px;
+  left: 25px;
 }
 
 .weather-icon {
@@ -134,150 +132,213 @@ body {
 }
 
 .weather-icon.feather {
-	height: 60px;
-	width: auto;
+  height: 60px;
+  width: auto;
 }
 
 .weather-temp {
-	margin: 0;
-	font-weight: 700;
-	font-size: 4em;
+  margin: 0;
+  font-weight: 700;
+  font-size: 4em;
 }
 
 .weather-desc {
-	margin: 0;
+  margin: 0;
 }
 
 .info-side {
-	position: relative;
-	float: left;
-	height: 100%;
-	padding-top: 25px;
+  position: relative;
+  float: left;
+  height: 100%;
+  padding-top: 25px;
   min-width: 300px;
 }
 
 .today-info {
-	padding: 15px;
-	margin: 0 25px 25px 25px;
-/* 	box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25); */
-	border-radius: 10px;
+  padding: 15px;
+  margin: 0 25px 25px 25px;
+  /* 	box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25); */
+  border-radius: 10px;
 }
 
-.today-info>div:not(:last-child) {
-	margin: 0 0 10px 0;
+.today-info > div:not(:last-child) {
+  margin: 0 0 10px 0;
 }
 
-.today-info>div .title {
-	float: left;
-	font-weight: 700;
+.today-info > div .title {
+  float: left;
+  font-weight: 700;
 }
 
-.today-info>div .value {
-	float: right;
+.today-info > div .value {
+  float: right;
 }
 
 .week-list {
-	list-style-type: none;
-	padding: 0;
-	margin: 10px 35px;
-	-webkit-box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25);
-	        box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25);
-	border-radius: 10px;
+  list-style-type: none;
+  padding: 0;
+  margin: 10px 35px;
+  -webkit-box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
 }
 
-.week-list>li {
-	float: left;
-	padding: 15px;
-	cursor: pointer;
-	-webkit-transition: 200ms ease;
-	-o-transition: 200ms ease;
-	transition: 200ms ease;
-	border-radius: 10px;
+.week-list > li {
+  float: left;
+  padding: 15px;
+  cursor: pointer;
+  -webkit-transition: 200ms ease;
+  -o-transition: 200ms ease;
+  transition: 200ms ease;
+  border-radius: 10px;
 }
 
-.week-list>li:hover {
-	-webkit-transform: scale(1.1);
-	    -ms-transform: scale(1.1);
-	        transform: scale(1.1);
-	background: #fff;
-	color: #222831;
-	-webkit-box-shadow: 0 0 40px -5px rgba(0, 0, 0, 0.2);
-	        box-shadow: 0 0 40px -5px rgba(0, 0, 0, 0.2)
+.week-list > li:hover {
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+  background: #fff;
+  color: #222831;
+  -webkit-box-shadow: 0 0 40px -5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 40px -5px rgba(0, 0, 0, 0.2);
 }
 
-.week-list>li.active {
-	background: #fff;
-	color: #222831;
-	border-radius: 10px;
+.week-list > li.active {
+  background: #fff;
+  color: #222831;
+  border-radius: 10px;
 }
 
-.week-list>li .day-name {
-	display: block;
-	margin: 10px 0 0 0;
-	text-align: center;
+.week-list > li .day-name {
+  display: block;
+  margin: 10px 0 0 0;
+  text-align: center;
 }
 
-.week-list>li .day-icon {
-	display: block;
-	height: 30px;
-	width: auto;
-	margin: 0 auto;
+.week-list > li .day-icon {
+  display: block;
+  height: 30px;
+  width: auto;
+  margin: 0 auto;
 }
 
-.week-list>li .day-temp {
-	display: block;
-	text-align: center;
-	margin: 10px 0 0 0;
-	font-weight: 700;
+.week-list > li .day-temp {
+  display: block;
+  text-align: center;
+  margin: 10px 0 0 0;
+  font-weight: 700;
 }
 
 .location-container {
-	padding: 15px 35px;
+  padding: 15px 35px;
 }
 
 .location-container-input {
-	padding: 0px 35px;
+  padding: 0px 35px;
 }
 
 .location-button {
-	outline: none;
-	width: 100%;
-	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
-	border: none;
-	border-radius: 8px;
-	padding: 10px;
-	font-family: 'Montserrat', sans-serif;
-	background-image: var(--gradient);
-	color: #ffffff;
-	font-weight: 700;
-	-webkit-box-shadow: 0 0 30px -5px rgba(0, 0, 0, 0.25);
-	        box-shadow: 0 0 30px -5px rgba(0, 0, 0, 0.25);
-	cursor: pointer;
-	-webkit-transition: -webkit-transform 200ms ease;
-	transition: -webkit-transform 200ms ease;
-	-o-transition: transform 200ms ease;
-	transition: transform 200ms ease;
-	transition: transform 200ms ease, -webkit-transform 200ms ease;
+  outline: none;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border: none;
+  border-radius: 8px;
+  padding: 10px;
+  font-family: 'Montserrat', sans-serif;
+  background-image: var(--gradient);
+  color: #ffffff;
+  font-weight: 700;
+  -webkit-box-shadow: 0 0 30px -5px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 30px -5px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  -webkit-transition: -webkit-transform 200ms ease;
+  transition: -webkit-transform 200ms ease;
+  -o-transition: transform 200ms ease;
+  transition: transform 200ms ease;
+  transition: transform 200ms ease, -webkit-transform 200ms ease;
 }
 
 .location-button:hover {
-	-webkit-transform: scale(0.95);
-	    -ms-transform: scale(0.95);
-	        transform: scale(0.95);
+  -webkit-transform: scale(0.95);
+  -ms-transform: scale(0.95);
+  transform: scale(0.95);
 }
 
-
 .location-input {
-	outline: none;
-	width: 100%;
-	-webkit-box-sizing: border-box;
-	        box-sizing: border-box;
-	border: none;
-	border-radius: 8px;
-	padding: 10px;
-	font-family: 'Montserrat', sans-serif;
-	color: $text-color-light;
-	font-weight: 700;
-	
+  outline: none;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border: none;
+  border-radius: 8px;
+  padding: 10px;
+  font-family: 'Montserrat', sans-serif;
+  color: $text-color-light;
+  font-weight: 700;
+}
+
+.overlay {
+  position: relative;
+  display: block;
+  height: 100%;
+  width: 100%;
+  background: rgba(#222831, 0.8);
+  margin: 0 auto;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  max-width: 600px;
+  border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+}
+
+.overlay::before {
+  content: '';
+  background: rgba(255, 255, 255, 0);
+  backdrop-filter: blur(8px);
+  position: absolute;
+  width: 140px;
+  height: 55px;
+  z-index: 20;
+  border-radius: 0 0 10px 10px;
+  border: 1px solid rgba(255, 255, 255, 0.274);
+  border-top: none;
+  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.082);
+  animation: anim2 2s infinite;
+}
+
+.overlay div {
+  background: rgb(228, 228, 228);
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  z-index: -1;
+  animation: anim 2s infinite linear;
+  animation-delay: calc(-0.3s * var(--i));
+  transform: translateY(5px);
+  margin: 0.2em;
+}
+
+@keyframes anim {
+  0%,
+  100% {
+    transform: translateY(5px);
+  }
+  50% {
+    transform: translateY(-65px);
+  }
+}
+
+@keyframes anim2 {
+  0%,
+  100% {
+    transform: rotate(-10deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
 }
